npm i drizzle orm

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.26.2",
+    "@libsql/client": "^0.3.6",
+    "drizzle-orm": "^0.28.6",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18"
@@ -20,6 +22,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "daisyui": "^3.9.4",
+    "drizzle-kit": "^0.19.13",
     "eslint": "^8",
     "eslint-config-next": "14.0.1",
     "postcss": "^8",
