--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@clerk/nextjs": "^4.26.2",
     "@libsql/client": "^0.3.6",
+    "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
     "next": "14.0.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
