--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "schema:gen": "drizzle-kit generate:sqlite --out src/server/db/migrations --schema src/server/db/schema.ts",
+    "schema:migrate": "ts-node -P src/server/db/db.tsconfig.json src/server/db/migrate"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.26.2",
@@ -29,6 +31,7 @@
     "eslint-config-next": "14.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5"
   }
 }
