--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.26.2",
+    "@clerk/themes": "^1.7.9",
     "@libsql/client": "^0.3.6",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
